Corrigindo descricao do package.json

--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,8 @@
   "keywords": [
     "REST API",
     "Social Pet",
-    "Doar animais de estimação",
-    "Encontrar animais de estimação"
+    "Publicar imagens com Pets",
+    "Acompanhar pets"
   ],
   "author": "Carlos Eduardo Dias Giacomini <carloseduardo.diasgiacomini@gmail.com>",
   "license": "ISC",
