--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "env": {
     "es6": true,
-    "node": true,
-    "jest/globals": true
+    "node": true
   },
   "extends": "standard",
   "globals": {
